--- a/index.html
+++ b/index.html
@@ -209,17 +209,15 @@
 
         <section class="about-text">
           <p>
-            I'm an Aerospace Graduate with a passion in Aerial robotics. I love solving complex engineering problems
-            and working on the latest technology
+            I'm an Aerospace Graduate with a passion in Aerial robotics. I love solving complex engineering problems that challenge my understanding and force me to adapt.
           </p>
 
           <p>
-            My job is to make sure Aircrafts fly and robots do what I want them to do.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            My approach is skeptical by default: define requirements, question assumptions, model conservatively, and validate with logs and edge cases.
+            I build simulation systems, implement on-board control algorithms, analyze flight data to drive design changes, run hardware-in-the-loop simulations,
+            and modify/integrate existing autopilots.
           </p>
+
         </section>
 
 
